# powerplant-coding-challenge

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: api.py  production_plan.py
app/core/: config.py
app/models/: pydantic_models.py
production_plan/: greedy.py
tests/: conftest.py  test_dummy.py  test_greedy.py  test_production_plan.py
unit_commitment/: __init__.py  app.py  main.py  pydantic_models.py  run_app.py
unit_commitment/api/routes/: api.py  production_plan.py
unit_commitment/core/: config.py
unit_commitment/production_plan/: calculate_production_plan.py  dummy.py  greedy.py
